Version 0.5 (11 June 2014)
--------------------------

	Changes in porg:

	+ Improved checking of command line options compatibility.
	+ Added paths {/run,/mnt,/media,/cdrom,/etc/mtab} to the default EXCLUDE.

	Changes in grop:

	+ Accept command line options (run 'grop -h' for more info).
	+ Added a "Cancel" button to the porgball creation dialog. Fixed some minor
	  bugs.
	+ Save settings in ~/.config/grop/groprc instead of ~/.grop

	Changes in scripts:

	+ Bugfix: Porgball failed when trying to log extractions with porg.
	+ Bugfix (#1): Paco2porg lost package information (thanks Leandro Nini).


Version 0.4 (26 May 2014)
-------------------------

	+ Bugfix: In some cases, tmp files were not removed after installing a 
	  package.
	+ Bugfix: Some files were not registered when logging the own porg
	  installation with "make logme".
	+ Bugfix: The main window of grop was partially invisible.
	+ Bugfix: Porgball failed to extract porgballs in some cases.
	+ New feature: When installing a package, save the environment variables
	  passed to ./configure, and not only the command line options.
	+ New feature: Expand any environment variable (and not only $HOME),
	  in variable LOGDIR in porgrc.
	+ New feature: Added option '-x|--exact-version' to porg and porgball (see 
	  man page).
	+ Improved the code for searching for package information.
	+ Added porg.spec.
	+ Removed the (buggy) superporg script.


Version 0.3 (19 May 2014)
-------------------------

	+ Readded GPL License and Copyright.
	+ Bugfix: Properly log files with spaces in their names.
	+ Bugfix: EXCLUDE variable in porgrc was not parsed correctly.
	+ Bugfix: Skip sourcing of /etc/bash_completion when installing
	  porg_bash_completion, to avoid errors from foreign software.


Version 0.2 (23 April 2014)
---------------------------

	+ Several bugs fixed thanks to the contribution of Masahiro Kasahara:
	  - paco2porg failed when importing paco logs with no logged files